WIP change img src to new imgs

--- a/public/index.html
+++ b/public/index.html
@@ -7,47 +7,44 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
 			name="description"
-			content="Zittron - The Virtual Content Manager"
+			content="Konceptify - The Virtual Content Manager"
 		/>
 
 		<!-- Primary Meta Tags -->
-		<title>Zittron - The Virtual Concept Manager</title>
-		<meta name="title" content="Zittron - The Virtual Concept Manager" />
+		<title>Konceptify - The Virtual Concept Manager</title>
+		<meta name="title" content="Konceptify - The Virtual Concept Manager" />
 		<meta
 			name="description"
-			content="Zittron empowers concept and franchise based businesses to virtually manage 
+			content="Konceptify empowers concept and franchise based businesses to virtually manage 
 					their store concept development & innovation, seasonal item roll-outs and 
 					product how-to learning process."
 		/>
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://www.zittron.com/" />
-		<meta
-			property="og:title"
-			content="ZITTRON - Virtual Concept Manager"
-		/>
+		<meta property="og:url" content="https://www.konceptify.com/" />
+		<meta property="og:title" content="Konceptify - Virtual Concept Manager" />
 		<meta
 			property="og:description"
-			content="Zittron empowers concept and franchise based businesses to virtually manage 
+			content="Konceptify empowers concept and franchise based businesses to virtually manage 
 their store concept development & innovation, seasonal item roll-outs and 
 product how-to learning process."
 		/>
 		<meta
 			property="og:image"
-			content="http://static1.squarespace.com/static/5def679ae5b0744826ceb233/t/5f3249ab0ec9bb77225bb1cd/1597131180886/zittron_logga.png?format=1500w"
+			content="http://static1.squarespace.com/static/5def679ae5b0744826ceb233/t/5f3249ab0ec9bb77225bb1cd/1597131180886/_logga.png?format=1500w"
 		/>
 
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
-		<meta property="twitter:url" content="https://www.zittron.com/" />
+		<meta property="twitter:url" content="https://www.konceptify.com/" />
 		<meta
 			property="twitter:title"
-			content="ZITTRON - Virtual Concept Manager"
+			content="Konceptify - Virtual Concept Manager"
 		/>
 		<meta
 			property="twitter:description"
-			content="Zittron empowers concept and franchise based businesses to virtually manage 
+			content="Konceptify empowers concept and franchise based businesses to virtually manage 
 their store concept development & innovation, seasonal item roll-outs and 
 product how-to learning process."
 		/>
@@ -95,8 +92,7 @@ product how-to learning process."
 				var b = document.createElement('script')
 				b.type = 'text/javascript'
 				b.async = true
-				b.src =
-					'https://snap.licdn.com/li.lms-analytics/insight.min.js'
+				b.src = 'https://snap.licdn.com/li.lms-analytics/insight.min.js'
 				s.parentNode.insertBefore(b, s)
 			})(window.lintrk)
 		</script>
