--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@ product how-to learning process."
 		/>
 		<meta
 			property="og:image"
-			content="http://static1.squarespace.com/static/5def679ae5b0744826ceb233/t/5f3249ab0ec9bb77225bb1cd/1597131180886/_logga.png?format=1500w"
+			content="https://ik.imagekit.io/lct7da3kd6o/Zittron/Asset_2_8x__1__xN_xpCe_R.png?ik-sdk-version=javascript-1.4.3&updatedAt=1643633758413"
 		/>
 
 		<!-- Twitter -->
